--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.10.12"
+python = ">=3.10.12,<3.13"
 tiktoken = "^0.4.0"
 openai = "^0.27.8"
 python-dotenv = "^1.0.0"
