--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "genaikit"
-version = "0.4.0"
+version = "1.4.0"
 description = "AI code and general assistant powered by OpenAI"
 authors = ["Vagner Bessa <bessavagner@gmail.com>"]
 license = "None"
@@ -14,20 +14,12 @@ include = [
 
 [tool.poetry.dependencies]
 python = ">=3.10.12,<3.13"
-tiktoken = "^0.4.0"
-openai = "^0.27.8"
+openai = "^1.3.4"
+tiktoken = "^0.5.1"
 python-dotenv = "^1.0.0"
-pypdf2 = "^3.0.1"
-pandas = "^2.0.3"
-numpy = "^1.25.1"
-matplotlib = "^3.7.2"
-plotly = "^5.15.0"
-scipy = "^1.11.1"
-scikit-learn = "^1.3.0"
-pyarrow = "^12.0.1"
-pytesseract = "^0.3.10"
-pdf2image = "^1.16.3"
-pillow = "^10.0.0"
+pandas = "^2.1.3"
+pyarrow = "12.0.1"
+scipy = "^1.11.4"
 
 [tool.poetry.dev-dependencies]
 
@@ -38,6 +30,7 @@ ipython = "^8.14.0"
 notebook = "^6.5.4"
 flake8 = "^6.0.0"
 pytest = "^7.4.2"
+pypdf = "^3.17.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
