--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "genaikit"
-version = "1.4.0"
+version = "1.0.0"
 description = "AI code and general assistant powered by OpenAI"
 authors = ["Vagner Bessa <bessavagner@gmail.com>"]
 license = "None"
@@ -20,6 +20,7 @@ python-dotenv = "^1.0.0"
 pandas = "^2.1.3"
 pyarrow = "12.0.1"
 scipy = "^1.11.4"
+spacy = "^3.7.2"
 
 [tool.poetry.dev-dependencies]
 
